[gd_scene load_steps=20 format=3 uid="uid://bapin6lpaigik"]

[ext_resource type="Texture2D" uid="uid://cyo1vrheivbaj" path="res://asset/Sprites/Enemies/slime_purple.png" id="1_fi5i3"]
[ext_resource type="Script" uid="uid://blid8ynmftxs2" path="res://scripts/enemy_red.gd" id="1_oh86k"]
[ext_resource type="PackedScene" uid="uid://c1287t2xos8ri" path="res://scenes/killzone.tscn" id="2_oh86k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a4ywr"]
atlas = ExtResource("1_fi5i3")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4auq"]
atlas = ExtResource("1_fi5i3")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdqbe"]
atlas = ExtResource("1_fi5i3")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2yeo"]
atlas = ExtResource("1_fi5i3")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvrhm"]
atlas = ExtResource("1_fi5i3")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxmbh"]
atlas = ExtResource("1_fi5i3")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7du6s"]
atlas = ExtResource("1_fi5i3")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dp05"]
atlas = ExtResource("1_fi5i3")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_82mwo"]
atlas = ExtResource("1_fi5i3")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv1ai"]
atlas = ExtResource("1_fi5i3")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mvye"]
atlas = ExtResource("1_fi5i3")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n88sx"]
atlas = ExtResource("1_fi5i3")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_bbuvh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4ywr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4auq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdqbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2yeo")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvrhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxmbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7du6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dp05")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_82mwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv1ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mvye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n88sx")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7v7lw"]
size = Vector2(10, 13)

[sub_resource type="CircleShape2D" id="CircleShape2D_p6kxm"]
radius = 50.022495

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oh86k"]
size = Vector2(6, 10)

[node name="EnemyRed" type="CharacterBody2D"]
script = ExtResource("1_oh86k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bbuvh")
animation = &"idle"
autoplay = "idle"
frame = 2
frame_progress = 0.8985892

[node name="killzone" parent="." instance=ExtResource("2_oh86k")]

[node name="killzones" type="CollisionShape2D" parent="killzone"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_7v7lw")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="AreaDetection" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 4.5)
shape = SubResource("CircleShape2D_p6kxm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_oh86k")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(15, 25)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-15, 25)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
